# blob-archiver-rs

./: .env.default  .gitignore  Cargo.toml  README.md  api.Dockerfile  archiver.Dockerfile  docker-compose.yaml
.github/workflows/: api.yaml  archiver.yaml  image.yaml  rust.yml
crates/beacon/: Cargo.toml
crates/beacon/src/: beacon_client.rs  blob_test_helper.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: fs.rs  lib.rs  s3.rs  storage.rs
