[workspace]
members = ["bin/archiver", "bin/api", "crates/config", "crates/storage", "crates/beacon"]
default-members = ["bin/archiver", "bin/api"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["grapebaba"]
repository = "https://github.com/optimism-java/blob-archiver-rs"
homepage = "https://github.com/optimism-java/blob-archiver-rs"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
eth2 = { git = "https://github.com/sigp/lighthouse.git", tag = "v5.2.1" }

clap = "4"
futures-util = "0.3"
reqwest = "0.12"
serde_json = "1.0.94"
serde = "1.0"
tracing = "0.1.40"
eyre = "0.6.12"
flate2 = "1.0.30"
async-trait = "0.1.81"
spin = { version = "0.9.8", features = ["mutex"] }

aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.41.0"
tokio = { version = "1.38.1", features = ["full"] }
again = "0.1.2"
rand = "0.8.5"
once_cell = "1.19.0"
hex = "0.4.3"