[workspace]
members = ["bin/archiver", "bin/api", "crates/storage", "crates/beacon"]
default-members = ["bin/archiver", "bin/api"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["grapebaba"]
repository = "https://github.com/optimism-java/blob-archiver-rs"
homepage = "https://github.com/optimism-java/blob-archiver-rs"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
eth2 = { git = "https://github.com/sigp/lighthouse.git", tag = "v5.2.1" }
warp_utils = { git = "https://github.com/sigp/lighthouse.git", tag = "v5.2.1" }

clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = "0.12"
serde_json = "1.0.94"
serde = "1.0"
tracing = "0.1.40"
eyre = "0.6.12"
flate2 = "1.0.30"
async-trait = "0.1.81"
spin = { version = "0.9.8", features = ["mutex"] }

aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.41.0"
tokio = { version = "1.38.1", features = ["full"] }
again = "0.1.2"
rand = "0.8.5"
once_cell = "1.19.0"
hex = "0.4.3"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
warp = "0.3.2"
ssz_rs = "0.9.0"
ctrlc = { version = "3.2.3", features = ["termination"] }