[package]
name = "blob-archiver-beacon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
async-trait.workspace = true
eth2.workspace = true
rand.workspace = true
once_cell.workspace = true
