[package]
name = "blob-archiver-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
eth2.workspace = true
eyre.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
flate2.workspace = true
async-trait.workspace = true
testcontainers-modules = { version = "0.9.0", features = ["localstack"] }
tracing.workspace = true
spin.workspace = true

[dev-dependencies]
testcontainers-modules = "0.9.0"